<resources>
    <string name="app_name">CoinX</string>
    <string name="about">Acerca de</string>
    <string name="portfolio">Portafolio</string>
    <string name="currency_converter">Conversor de Moneda</string>
    <string name="logo">logo</string>
    <string name="conv1">Convertir a:</string>
    <string name="clear">Limpiar</string>
    <string name="hint">$ 0.00</string>
    <string name="cash_symbol">$ %,.2f</string>
    <string name="my_portfolio">Mi Portafolio</string>
    <string name="date">Fecha</string>
    <string name="message">Esta app fue elaborada por Luis Alberto Guerrero, estudiante de la carrera de Ing. Telematica de la PUCMM para el curso de desarrollo de aplicaciones moviles de Altice en el año 2018.</string>
</resources>
