<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="50dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#5d5566"
    tools:context="com.altice.hojuelita.coinx.MainActivity">

    <ImageView
        android:id="@+id/my_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/coin_logo"
        tools:layout_width="wrap_content" />

    <Button
        android:id="@+id/my_button0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/currency_converter"/>


    <Button
        android:id="@+id/my_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/about" />

</LinearLayout>
